# deepquantum

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  photonic_tutorial.ipynb  photonics_tutorial.ipynb  pylintrc  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.py  tutorial_ugate_map_plt_clements.ipynb
.github/workflows/: publish-to-pypi-github-release.yml
cache/: Idx_2qb_6mode_aux_00.pt  Idx_2qb_6mode_aux_10.pt  Idx_3qb_8mode_aux_00.pt  Idx_3qb_8mode_aux_10.pickle
deepquantum/: __init__.py  ansatz.py  circuit.py  gate.py  layer.py  operation.py  optimizer.py  qmath.py  state.py  utils.py
deepquantum/docs/: basics.ipynb
deepquantum/dqp/: 6mode_cnot_1110_00.npy  6mode_cnot_1110_10.npy  __init__.py  circuit.py  draw.py  gate.py  operation.py  photonic_circuit_test_20231109.ipynb  photonic_circuit_test_20231115.ipynb  photonic_qmath.py  photonic_test.ipynb  state.py
deepquantum/photonic/: README.md  __init__.py  ansatz.py  circuit.py  decom_plt_clements.py  decompose.py  draw.py  gate.py  map_quantum_gate.py  mapper.py  operation.py  qmath.py  qumode.py  state.py  test.py  utils.py
deepquantum/photonic/fock/: __init__.py  ops.py
deepquantum/photonic/gaussian/: __init__.py  ops.py  util.py  utils.py
deepquantum/photonic/tests/: VarGBS.ipynb  fock_tests.py  gaussian_tests.py
deepquantum/pytorch/: circuit.py  gate.py  layer.py  operation.py  qmath.py  state.py
docs/: author_list.json  basics.ipynb  case_list.json  event_list.json  mbqc_basics.ipynb  photonic_basics.ipynb  photonic_fock_basics.ipynb  photonic_tutorial.ipynb  test_fockbackend_is_prob.ipynb  tutorial_ugate_map_plt_clements.ipynb  unitary_mapper.ipynb  var_gbs.ipynb
docs/source/: conf.py  demos  index.md  tutorials
docs/source/_static/: custom.css  iframe-fullscreen-fallback.js  sidebar-click-logger.js  sidebar-viewport-sync.js  site-chrome.css  site-chrome.js
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst  layout.html  site-footer.html
docs/source/api/: api.rst
docs/source/demos/: ruff.toml
docs/source/quick_start/: basic_examples.md  basic_examples_cn.md  basic_usage.md  basic_usage_cn.md  introduction.md  introduction_cn.md
docs/sphinx_doc/: README.md  conf.py  deepquantum.photonic.rst  deepquantum.rst  index.rst  intro.md  modules.rst  requirements.txt  基础使用指南.md  引言和概述.md  案例.md
docs/sphinx_doc_en/: Application_Cases.md  Basic_Usage_Guide.md  Introduction_and_Overview.md  conf.py  deepquantum.rst  index.rst
examples/: Example_MBQC.ipynb  basic_gate_MBQC.ipynb  basic_gate_MBQC.py  demos  hhl.ipynb  hhl.py  qaoa.ipynb  qaoa.py  qresnets.ipynb  qresnets.py  quantum_state_transfer_1d.ipynb  quantum_state_transfer_1d.py  ruff.toml  test_for_onchip_optimizer.ipynb  test_for_onchip_optimizer.py  unitary_mapper.ipynb  unitary_mapper.py  vqe_for_CRW.ipynb  vqe_for_CRW.py
examples/benchmarks/: gradient_benchmark.py
examples/bosonic/breeding_cat/: bosonic_breeding.ipynb
examples/cases/: ipynb2py.py  readme.txt
examples/cases/case_1_0001_Bell-GHZ/: Bell-GHZ.ipynb  Bell-GHZ.py
examples/cases/case_1_0002_teleportation/: teleportation.ipynb  teleportation.py
examples/cases/case_1_0003_Deutsch-Jozsa/: Deutsch-Jozsa.ipynb  Deutsch-Jozsa.py
examples/cases/case_1_0004_Hadamard-test/: Hadamard-test.ipynb  Hadamard-test.py
examples/cases/case_1_0005_SWAP-test/: SWAP-test.ipynb  SWAP-test.py
examples/cases/case_1_0006_superdense-coding/: superdense-coding.ipynb  superdense-coding.py
examples/cases/case_1_0007_Bernstein-Vazirani/: Bernstein-Vazirani.ipynb  Bernstein-Vazirani.py
examples/cases/case_1_0008_quantum-key-distribution/: quantum-key-distribution.ipynb  quantum-key-distribution.py
examples/cases/case_1_0009_quantum-phase-estimation/: quantum-phase-estimation.ipynb  quantum-phase-estimation.py
examples/cases/case_1_0010_phase_kickback/: phase_kickback.ipynb  phase_kickback.py
examples/cases/case_1_0011_quantum-basis/: quantum-basis.ipynb  quantum-basis.py
examples/cases/case_2_0001_W-state/: W-state.ipynb  W-state.py
examples/cases/case_2_0002_Grover/: Grover.ipynb  Grover.py
examples/cases/case_2_0003_quantum-fourier-transform/: quantum-fourier-transform.ipynb  quantum-fourier-transform.py
examples/cases/case_2_0004_Quantum-Amplitude-Amplification/: Quantum-Amplitude-Amplification.ipynb  Quantum-Amplitude-Amplification.py
examples/cases/case_2_0005_image-frqi/: image-frqi.ipynb  image-frqi.py
examples/cases/case_2_0006_image-neqr/: image-neqr.ipynb  image-neqr.py
examples/cases/case_2_0007_simon/: simon.ipynb  simon.py
examples/cases/case_2_0008_variational-classifier/: variational-classifier.ipynb  variational-classifier.py
examples/cases/case_2_0009_vqe/: vqe.ipynb  vqe.py
examples/cases/case_2_0011_simple-cluster-state/: simple-cluster-state.ipynb  (+1 more)
sphinx_doc/: conf.py
src/: ruff.toml
src/deepquantum/: __init__.py  adjoint.py  ansatz.py  bitmath.py  channel.py  circuit.py  communication.py  cutting.py  distributed.py  gate.py  layer.py  operation.py  optimizer.py  qasm3.py  qmath.py  qpd.py  state.py  test.out  utils.py
tests/: test_ansatz.py  test_auto_grad.py  test_channel.py  test_circuit.py  test_gaussian_prob_thewalrus.py  test_get_amplitude.py  test_init_state_batch.py  test_mapper.py  test_mbqc_optimize_pattern.py  test_mbqc_transpile.py  test_module.py  test_mps.py  test_multi_amplitudes.py  test_partial_amplitudes.py  test_photonic_batch_shape.py  test_photonic_bosonic.py  test_photonic_circuit_fock.py  test_photonic_circuit_gaussian.py  test_photonic_fock.py  test_photonic_gate.py  test_photonic_nongaussian.py  test_photonic_qmath.py  test_photonic_random_circuit.py  test_qumode_draw_barrier.py  test_williamson.py  test_with_graphix.py  test_with_pennylane.py  test_with_perceval.py  test_with_qutip.py  test_with_xanadu.py  test_with_xanadu_gate.py  test_with_xanadu_loss.py
tutorials/: basics.ipynb  basics.py  mbqc_basics.ipynb  mbqc_basics.py  photonic_basics.ipynb  photonic_basics.py  ruff.toml
(+332 files in other folders)
