[build-system]
requires = ['setuptools >= 80.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'deepquantum'
dynamic = ['version']
dependencies = [
    'torch>=2.4.0',
    'numpy',
    'matplotlib',
    'qiskit',
    'pylatexenc',
    'scipy',
    'sympy',
    'svgwrite',
    'bayesian-optimization<2',
    'networkx',
    'tqdm',
    'psutil'
]
requires-python = '>=3.9'
authors = [
    {name = 'TuringQ', email = 'Algorithms-Applications@turingq.com'},
    {name = 'Junjie He', email = 'hejunjie@turingq.com'},
    {name = 'Keming Hu', email = 'hukeming@turingq.com'},
    {name = 'Yuze Zhu', email = 'zhuyuze@turingq.com'}
]
maintainers = [
    {name = 'Junjie He', email = 'hejunjie@turingq.com'}
]
description = 'DeepQuantum for quantum computing'
readme = 'README.md'
keywords = ['quantum computing', 'quantum machine learning', 'photonic quantum computing']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent'
]

[project.optional-dependencies]
dev = ['pytest',
       'perceval-quandela',
       'strawberryfields',
       'thewalrus',
       'graphix==0.3.1']

[project.urls]
Homepage = 'https://deepquantum.turingq.com/'
Documentation = 'https://dqapi.turingq.com/'
Repository = 'https://github.com/TuringQ/deepquantum.git'
Issues = 'https://github.com/TuringQ/deepquantum/issues'

[tool.setuptools.dynamic]
version = {attr = 'deepquantum.__version__'}

[tool.setuptools.package-data]
'deepquantum.photonic' = ['cache/*']
